# manora

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  RELEASE.md  cliff.toml
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md  other.md
.github/workflows/: CI.yml
doc/man/: manora.1.scd
res/completions/: manora.bash  manora.fish  manora.zsh
scripts/: mkrelease.sh
src/: cachedir.rs  download.rs  help.rs  main.rs  manora.sh  menu.rs  open.rs  print.rs  save.rs  tmpdir.rs  version.rs
test/case/: basic_functions.bats
tests/: help.rs  save.rs  version.rs
