[package]
name = "manora"
version = "1.3.3"
authors = ["Robin Candau <robincandau@protonmail.com>"]
edition = "2024"
description = "A simple CLI / TUI tool to display (or save) man pages as PDFs"
license = "GPL-3.0-or-later"

[dependencies]
tempfile = "3.27.0"

[dev-dependencies]
assert_cmd = "2.0.0"
predicates = "3.1.4"
