[package]
name = "manora"
version = "1.3.3"
authors = ["Robin Candau <robincandau@protonmail.com>"]
edition = "2024"
description = "A simple CLI / TUI tool to display (or save) man pages as PDFs"
license = "GPL-3.0-or-later"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
nix = { version = "0.31.3", features = ["user"] }
ratatui = "0.30.2"

[dev-dependencies]
assert_cmd = "2.0.0"
predicates = "3.1.4"
